Fix the look of footer when it becomes too narrow.

--- a/_assets/stylesheets/less/theme-core.less
+++ b/_assets/stylesheets/less/theme-core.less
@@ -62,6 +62,10 @@ html, body {
   p {
     margin-bottom: 0;
     padding: @padding-base-vertical 0;
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   a {
